sort.baseball.InsertBaseball.scala.error
Compilation error:
InsertBaseball:11: error: not found: value renitialise
    renitialise(Index)
    ^